<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_swipe_to_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.opensooq.weatherapp.ui.main.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layout_internet_connection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/img_sad_smile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/no_internet_connection"
                android:src="@drawable/ic_sad_smile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_sad_smile"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/no_internet_connection" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/view_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_8_dp">

                    <ImageView
                        android:id="@+id/ic_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/location"
                        android:src="@drawable/ic_location_on_green" />

                    <TextView
                        android:id="@+id/txt_city_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/ic_location"
                        android:text="@string/amman_jo"
                        android:textSize="@dimen/txt_size_city_name" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:descendantFocusability="blocksDescendants"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:orientation="vertical"
                        android:padding="@dimen/padding_16_dp">

                        <TextView
                            android:id="@+id/txt_today_temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/txt_size_temp" />

                        <TextView
                            android:id="@+id/txt_today_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/txt_today_temp"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/sunny"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/txt_size_state" />


                        <TextView
                            android:id="@+id/txt_today_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/txt_today_desc"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/txt_size_date" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hourly" />

                    <lecho.lib.hellocharts.view.LineChartView
                        android:id="@+id/view_chart_line"
                        android:layout_width="match_parent"
                        android:layout_height="125dp"
                        android:padding="@dimen/padding_8_dp" />

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_8_dp">

                            <ImageView
                                android:id="@+id/ic_forecast"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:contentDescription="@string/location"
                                android:src="@drawable/ic_forecast" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="16dp"
                                android:layout_toEndOf="@+id/ic_forecast"
                                android:text="@string/forecast_for_5_days"
                                android:textSize="@dimen/txt_size_city_name" />

                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rc_forecast"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <ImageView
                            android:id="@+id/img_sad_smile_for_weather_data"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_centerInParent="true"
                            android:contentDescription="@string/no_weather_data_for"
                            android:src="@drawable/ic_sad_smile" />
                    </RelativeLayout>

                </LinearLayout>

            </android.support.v4.widget.NestedScrollView>

        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.SwipeRefreshLayout>
